[QMZEN](translate): traslate about page

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>QMZIT - 求职必修课 - Help IT Students Get First Job in Australia</title>
+    <title>QMZIT - About Us - Help IT Students Get First Job in Australia</title>
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -135,8 +135,8 @@
                         <h1 class="white margin-bottom-small">About QMZIT</h1>
                         <p class="heading white">
                             Help IT Students Get First Job in Australia <br>
-                            我们的团队由澳洲一线资深IT工程师和八大名校王牌老师组成 <br>
-                            一起最短时间提升你面试技能</p>
+                            We are a team of senior/lead engineers from top IT company in Australia, together with university professor, <br>
+                            aiming to train student to be industry ready in 3 months.</p>
                     </div>
                     <div class="gradient dark"></div>
                 </li>
@@ -147,10 +147,10 @@
             <div class="row margin-leftright-null text-center">
                 <div class="col-md-12 padding-leftright-null">
                     <div class="text">
-                        <h2 class="margin-bottom-null title center grey">IT 敲门砖</h2>
+                        <h2 class="margin-bottom-null title center grey">QMZ IT</h2>
                         <div class="padding-onlytop-md">
-                            <h3 class="grey big margin-bottom-small">心路历程</h3>
-                            <p class="heading center margin-bottom-null grey"> 不积跬步，无以至千里；不积小流，无以成江海</p>
+                            <h3 class="grey big margin-bottom-small">Manifesto</h3>
+                            <p class="heading center margin-bottom-null grey"> Good Will Hunting</p>
                         </div>
                     </div>
                 </div>
@@ -161,42 +161,48 @@
                     <ul class="timeline">
                         <li>
                             <div class="content">
-                                <p>QMZIT，联合澳洲一线资深IT工程师，八大名校金牌老师，一起为IT留学生们打造专业的澳洲IT面试培训课程。力求最短时间提升你面试技能，帮助留学生斩获第一份工作。</p>
+                                <p>QMZ IT，a team of senior/lead engineers from top IT company in Australia,
+                                    together with university professor，providing professional training program to help
+                                    IT students from different background find their dream job in 3 months.
+                                </p>
                             </div>
                             <div class="timeline-badge"></div>
                             <div class="title">
                                 <h3>2019</h3>
-                                <p class="heading grey">QMZIT 对公众开放</p>
+                                <p class="heading grey">QMZ IT Open To Public</p>
                             </div>
                         </li>
                         <li>
                             <div class="content">
-                                <p>继续改革私人定制课程，课程范围触及澳洲IT众多领域。Web全栈工程，DevOps，移动端工程，精品数据分析，UI/UX实践，BA商业分析精进。</p>
+                                <p>Continue to improve personalised training experience，expanding core training program
+                                    to include Web Full-Stack，DevOps，Mobile Engineering，Data Science，UI/UX Design and BA.
+                                </p>
                             </div>
                             <div class="timeline-badge"></div>
                             <div class="title">
                                 <h3>2017</h3>
-                                <p class="heading grey">QMZIT 课程改革和升级</p>
+                                <p class="heading grey">QMZIT Training Program + Industry Project</p>
                             </div>
                         </li>
                         <li>
                             <div class="content">
-                                <p>助力墨大，RMIT研究项目，不断为课程带来最前沿的IT工业实践。实践课程注册学生数量高达200+。</p>
+                                <p>Official research/industry partner with RMIT University，bring the best practice from industry into university.
+                                    Peak student enrollment number reaches to 200+ !</p>
                             </div>
                             <div class="timeline-badge"></div>
                             <div class="title">
                                 <h3>2016</h3>
-                                <p class="heading grey">QMZIT 助力大学，服务学生</p>
+                                <p class="heading grey">QMZ IT + University，Students ❤️</p>
                             </div>
                         </li>
                         <li>
                             <div class="content">
-                                <p>QMZIT以私人定制的形式，帮助IT留学生们拿到一线企业实习经验，最后斩获工作。</p>
+                                <p>Provide private training program to help students to go through face-to-face interview, get their first job in 3 months.</p>
                             </div>
                             <div class="timeline-badge"></div>
                             <div class="title">
                                 <h3>2015</h3>
-                                <p class="heading grey">IT 敲门砖 初出茅庐</p>
+                                <p class="heading grey">QMZ IT, Reborn</p>
                             </div>
                         </li>
                     </ul>
@@ -206,8 +212,8 @@
             <!-- Section partners -->
             <div class="row padding-md margin-leftright-null color-background">
                 <div class="col-md-12 text-center">
-                    <h4 class="big margin-bottom-small white">加入我们，获取面试动向和最新套路，斩获第一份工作</h4>
-                    <a href="itman-foundation-course.html" target="_blank" class="btn-alt small white margin-null active shadow">查看求职必修课</a>
+                    <h4 class="big margin-bottom-small white">Join QMZIT, get first job in 3 months, secure your future.</h4>
+                    <a href="itman-foundation-course.html" target="_blank" class="btn-alt small white margin-null active shadow">checkout IT Foundation Course</a>
                 </div>
             </div>
             <!-- END Section partners -->
