[QMZEN](asset): update logo asset

--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
                     <div class="col-xs-6 col-sm-3 col-md-2">
                         <h6 class="heading white margin-bottom-extrasmall">Social Media</h6>
                         <ul class="info">
-                            <li><i class="fa fa-qq"></i> QQ group 1: <span class="white follow-wechat">716553693 <span class="follow-wechat-popup"><img src="assets/img/logo/qq_1_group.jpeg" /></span> </span></li>
-                            <li><i class="fa fa-qq"></i> QQ group 2: TBC </li>
+                            <li><i class="fa fa-qq"></i> WhatsApp group 1: <span class="white follow-wechat"><a href="https://bit.ly/qmzit01">bit.ly/qmzit01</a> <span class="follow-wechat-popup"><img src="assets/img/logo/whatsapp_qmzen.jpeg" /></span> </span></li>
+                            <li><i class="fa fa-qq"></i> WhatsApp group 2: TBC </li>
                         </ul>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4">
