[QMZEN](translate): tweak for foundation course

--- a/itman-foundation-course.html
+++ b/itman-foundation-course.html
@@ -274,7 +274,7 @@
                                     <h4 class="h4 p-t-5">Dr. Alex</h4>
                                     <p class="text-primary p-t-5" style="font-style: italic;">Ex-Microsoft Engineer/Team Lead</p>
                                     <p>p.h.D. in CS，20+ offers from Microsoft, ANZ, NAB...，Lecturer/Head tutor in RMIT and Melb Uni.</p>
-                                    <p>Have rich experience as both interviewee and interviewer</p>
+                                    <p>10 years+ experience as both interviewee and interviewer</p>
                                 </div>
                             </div>
                         </div>
@@ -561,13 +561,13 @@
                                     </div>
                                     <br>
                                     <div>
-                                        <div class="price-card-item"><strong style="color: rgb(44, 44, 44);">How to obtain group price</strong>
+                                        <div class="price-card-item"><strong style="color: rgb(44, 44, 44);">How to get group price</strong>
                                             <span class="price-label" style="background-color: rgb(245, 87, 83); color: white; margin-left: 3px;">COUPON</span>
                                         </div>
                                         <div style="padding: 30px;">
-                                            <div style="font-size: 11px;">Scan the QQ QR code below:
+                                            <div style="font-size: 11px;">Scan the WhatsApp QR code below:
                                         </div>
-                                            <div class="text-center"><img src="assets/img/logo/qq_1_group.jpeg" width="133"></div>
+                                            <div class="text-center"><img src="assets/img/logo/whatsapp_qmzen.jpeg" width="133"></div>
                                         </div>
                                     </div>
                                 </div>
