[QMZEN](translate): traslate iOS course page

--- a/itman-foundation-course.html
+++ b/itman-foundation-course.html
@@ -184,7 +184,7 @@
                                 <dt style="margin-top:30px">Course Duration</dt>
                                 <dd style="margin-top:5px">1.5 hours for each lesson, 12 hours in total</dd>
                                 <dt style="margin-top:30px">Prerequisites</dt>
-                                <dd style="margin-top:5px">Have experience in any programming language（e.g. Java, C, Python）</dd>
+                                <dd style="margin-top:5px">Experienced in any programming language（e.g. Java, C, Python）</dd>
                                 <dt style="margin-top:30px">Course instruction</dt>
                                 <dd style="margin-top:5px">Live Broadcast, students must be on time. (there is no refund for missing any lesson)</dd>
                             </dl>
