[QMZEN](translate): traslate iOS course page

--- a/itman-iOS-god.html
+++ b/itman-iOS-god.html
@@ -167,7 +167,8 @@
                             <h1 style="text-align: center;">iOS - the most mature mobile business platform</h1>
                             <hr />
                             <p>
-                                iOS has evolved a lot over the years. In the latest upgrade, Apple introduced a new system font called San Francisco, 3D Touch and multitasking on the iPad. In Xcode, you will find<a href="https://developer.apple.com/videos/play/wwdc2015-218/">Stack Views</a>，这是一个很棒的工具，可以让你的布局更具适应性而不需要自动布局的复杂性。 Apple比以往任何时候都更加鼓励自适应布局，以便您的设计可以在多个设备上运行。
+                                iOS has evolved a lot over the years. In the latest upgrade, Apple introduced a new system font called San Francisco, 3D Touch and multitasking on the iPad. In Xcode, you will find<a href="https://developer.apple.com/videos/play/wwdc2015-218/">Stack Views</a>，
+                                This is a great tool to make your layout more adaptable without the complexity of automatic layout. Apple is more than ever encouraging responsive layouts so your design can run on multiple devices.
                             </p>
 
                             <center><img class="img-responsive center-block" src="assets/img/iOS_god/Design-StackViews.jpg"></center>
@@ -615,7 +616,7 @@
                                 </tr>
                                 <tr>
                                     <td class="text-center course-overview-item"><b>6</b></td>
-                                    <td class="text-center" style="border: 1px solid rgb(229, 229, 229);"><span style="font-weight: bold;">Industry Project</span></td>
+                                    <td class="text-center" style="border: 1px solid rgb(229, 229, 229);"><span style="font-weight: bold;">iOS Industry Project</span></td>
                                     <td class="text-center course-overview-item"><span>2019/09/07 20:00:00</span></td>
                                     <td class="text-center course-overview-item"><span>2019/09/07 20:00:00</span></td>
                                 </tr>
