[QMZEN](translate): traslate ml course page

--- a/itman-iOS-god.html
+++ b/itman-iOS-god.html
@@ -152,7 +152,7 @@
                                 </p>
                                 <br>
                                 <p class="heading white">
-                                    course begin in: <span id="count-down"></span>
+                                    program begin in: <span id="count-down"></span>
                                 </p>
                             </div>
                             <div class="gradient dark"></div>
