[QMZEN](translate): traslate ml course page

--- a/itman-ml.html
+++ b/itman-ml.html
@@ -167,8 +167,7 @@
                             <hr />
                             <p>
                                 Artificial intelligence will shape our future more powerfully than any other innovation of this century.
-                                Anyone who doesn't understand it will soon find that he feels forgotten and wakes up in a world full of technology that feels more and more like magic.
-                                In 2015, Google trained a conversational agent (AI) that not only convincingly interacts with humans as a technical support desk, but also discusses ethics,
+                                Anyone who doesn't understand it will soon find that he feels forgotten and wakes up in a world full of technology that feels more and more like magic. <br>In 2015, Google trained a conversational agent (AI) that not only convincingly interacts with humans as a technical support desk, but also discusses ethics,
                                 expressing opinions and answering general questions based on facts.
                             </p>
 
@@ -457,7 +456,7 @@
                                     <span class="fa fa-google"></span>
                                 </div>
                                 <div class="course-box-content" style="display: inline-block;">
-                                    class="course-box-content" style="display: inline-block;">
+                                    <class="course-box-content" style="display: inline-block;">
                                     <h4 style="font-weight: bold;">Australia Top Senior/Lead Engineers</h4>
                                     <p style="font-size: 14px;">Provide systematic and personalised IT training with job oriented program</p>
                                 </div>
