[QMZEN](menu): edit the menu content

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                                     <a href="javascript:void(0)" class="active-item"><i class="fa fa-tv"></i>Live Course</a>
                                     <ul class="sub-menu">
                                         <li><a href="itman-foundation-course.html">IT-Foundation🔥</a></li>
-                                        <li><a href="itman-iOS-god.html">iOS Program🔥</a></li>
-                                        <li><a href="itman-ml.html">Machine Learning Program🔥</a></li>
-                                        <li><a href="coming-soon/itman-coming-soon.html">Web Full-Stack Program🔥🔥</a></li>
-                                        <li><a href="coming-soon/itman-coming-soon.html">Business Analytics Program</a></li>
+                                        <li><a href="itman-iOS-god.html">iOS/Android🔥</a></li>
+                                        <li><a href="itman-ml.html">Machine Learning🔥</a></li>
+                                        <li><a href="coming-soon/itman-coming-soon.html">Web Full-Stack🔥🔥</a></li>
+                                        <li><a href="coming-soon/itman-coming-soon.html">DevOps/BA</a></li>
                                     </ul>
                                 </li>
                                 <li class="submenu">
