[QMZEN](index page): remove heading css for the blue tag attention

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         <div class="col-lg-4 padding-leftright-null">
                             <div data-responsive="child-height" data-responsive-id="adv" class="text height-auto-lg vertical-align-outer">
                                 <div class="color-background box-shadow vertical-align-inner text responsive-padding-sm padding-md-topbottom-null">
-                                    <blockquote class="white"> The first lesson is a free trial class. FREE. The number of live broadcast classes is limited to 10 people only, so please hurry up while you have chance !</blockquote>
+                                    <blockquote class="white"> The first lesson is a free trial class. [FREE]. The current broadcast course is limited to ten people only, so please hurry up while you have chance !</blockquote>
                                 </div>
                             </div>
                         </div>
