--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                             </div>
                         </div>
                         <div class="col-lg-4 padding-leftright-null">
-                            <div data-responsive="child-height" data-responsive-id="adv" class="text height-auto-lg vertical-align-outer">
-                                <div class="color-background box-shadow vertical-align-inner text responsive-padding-sm padding-md-topbottom-null">
+                            <div data-responsive="child-height" data-responsive-id="adv" class="text height-auto-lg vertical-align-outer" style="padding-top: 0;">
+                                <div class="color-background box-shadow vertical-align-inner text responsive-padding-sm padding-md-topbottom-null" style="padding-top: 0; padding-bottom: 0;">
                                     <blockquote class="white"> The first lesson is a free trial class. [FREE]. The current broadcast course is limited to ten people only, so please hurry up while you have chance !</blockquote>
                                 </div>
                             </div>
