--- a/itman-ml.html
+++ b/itman-ml.html
@@ -95,7 +95,7 @@
                                         <li><a href="itman-foundation-course.html">IT-Foundation🔥</a></li>
                                         <li><a href="itman-iOS-god.html">iOS/Android🔥</a></li>
                                         <li><a href="itman-ml.html">Machine Learning🔥</a></li>
-                                        <li><a href="coming-soon/itman-coming-soon.html">Web Full-Stack🔥🔥</a></li>
+                                        <li><a href="itman-web.html">Web Full-Stack🔥🔥</a></li>
                                         <li><a href="coming-soon/itman-coming-soon.html">DevOps/BA</a></li>
                                     </ul>
                                 </li>
