[QMZEN](web course asset): asset import

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                                                 <h6 class="heading black">Web Full-Stack Job Ready Program</h6>
                                                 <p class="heading margin-null">Laravel+Vue, React+.Net</p>
                                             </div>
-                                            <a href="coming-soon/itman-coming-soon.html" class="link"></a>
+                                            <a href="itman-web.html" class="link"></a>
                                         </div>
                                     </div>
                                 </section>
