--- a/itman-web.html
+++ b/itman-web.html
@@ -34,7 +34,7 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
 
-        <title>QMZIT - Web Full-Stack Industry Ready Program - Help IT Students Get First Job in Australia</title>
+        <title>QMZIT - Web Full-Stack Program - Help IT Students Get First Job in Australia</title>
 
         <!-- Bootstrap -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -143,7 +143,7 @@
                     <ul class="slides">
                         <li style="background-image:url(assets/img/web_fullstack/web-intro-splash.jpg)">
                             <div class="text text-center">
-                                <h1 class="white margin-bottom-small">Web Full-Stack Industry Ready Program Episode 1</h1>
+                                <h1 class="white margin-bottom-small">Web Full-Stack Vol. 1</h1>
                                 <p class="heading white">
                                     Award-winning project oriented, Senior engineers from top financial firms as instructors  <br>
                                     by completing this program, you will become an industry job ready candidate <br>
