[QMZEN](course): change course title to Vol. based

--- a/itman-ml.html
+++ b/itman-ml.html
@@ -34,7 +34,7 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
 
-        <title>QMZIT - Machine Learning Industry Ready Program - Help IT Students Get First Job in Australia</title>
+        <title>QMZIT - Machine Learning Program - Help IT Students Get First Job in Australia</title>
 
         <!-- Bootstrap -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -143,7 +143,7 @@
                     <ul class="slides">
                         <li style="background-image:url(assets/img/ml/ml-course-cover.jpg)">
                             <div class="text text-center">
-                                <h1 class="white margin-bottom-small">Machine Learning Industry Ready Program Episode 3</h1>
+                                <h1 class="white margin-bottom-small">Machine Learning Program Vol. 3</h1>
                                 <p class="heading white">
                                     Award-winning project oriented, Lead engineer from Microsoft as instructor <br>
                                     by completing this program, you will become an industry job ready candidate <br>
