--- a/itman-iOS-god.html
+++ b/itman-iOS-god.html
@@ -34,7 +34,7 @@
         <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
 
-        <title>QMZIT - iOS Industry Ready Program - Help IT Students Get First Job in Australia</title>
+        <title>QMZIT - iOS Program - Help IT Students Get First Job in Australia</title>
 
         <!-- Bootstrap -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -143,7 +143,7 @@
                     <ul class="slides">
                         <li style="background-image:url(assets/img/course_cover/foundation-course-cover.png)">
                             <div class="text text-center">
-                                <h1 class="white margin-bottom-small">iOS Industry Ready Program Episode 4</h1>
+                                <h1 class="white margin-bottom-small">iOS Program Vol. 4</h1>
                                 <p class="heading white">
                                     Award-winning project oriented, Lead engineer from Microsoft as instructor<br>
                                     from 0 to AppStore ready, from 0 to job ready, 10 weeks intensive training, <br>
