[QMZEN](course index): update the course index page wording

--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
                                 <div class="padding-lg padding-md-topbottom-null">
                                     <h3 class="big white margin-bottom-small">QMZ IT <br> Help IT Students Get First Job in Australia</h3>
                                     <p class="heading left white">
-                                        QMZ IT, provide professional Australia IT job ready training
-                                        <br> we are a group of senior/lead engineers from Australian top IT companies and universities
-                                        <br> whether you are just graduating, or switching to IT, or want to enter the IT industry but do not know where to start, join QMZ IT
-                                        <br> we will help you get your first IT job from 0 to professional</p>
+                                        QMZ IT, provide professional Australia IT job ready training.
+                                        <br> We are a group of senior/lead engineers from Australian top IT companies and universities.
+                                        <br> Whether you are just graduating, or switching to IT, or want to enter the IT industry but do not know where to start, join QMZ IT,
+                                        <br> We will help you get your first IT job from 0 to professional.</p>
                                     <a href="https://www.youtube.com/embed/I4_3t1hVqYY" class="btn-pro white z-index">video introduction</a>
                                 </div>
                             </div>
