[QMZEN](course footer): update footer to use whatsapp icon

--- a/itman-ml.html
+++ b/itman-ml.html
@@ -768,16 +768,16 @@
                     <div class="col-xs-6 col-sm-3 col-md-2">
                         <h6 class="heading white margin-bottom-extrasmall">Social Media</h6>
                         <ul class="info">
-                            <li><i class="fa fa-qq"></i> WhatsApp group 1: <span class="white follow-wechat"><a href="https://bit.ly/qmzit01">bit.ly/qmzit01</a> <span class="follow-wechat-popup"><img src="assets/img/logo/whatsapp_qmzen.jpeg" /></span> </span></li>
-                            <li><i class="fa fa-qq"></i> WhatsApp group 2: TBC </li>
+                            <li><i class="fa fa-whatsapp"></i> WhatsApp group 1: <span class="white"><a href="https://bit.ly/qmzit01">bit.ly/qmzit01</a> <span class="follow-wechat-popup"><img src="assets/img/logo/whatsapp_qmzen.jpeg" /></span> </span></li>
+                            <li><i class="fa fa-whatsapp"></i> WhatsApp group 2: TBC </li>
                         </ul>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4">
                         <h6 class="heading white margin-bottom-extrasmall">Contact Us</h6>
                         <ul class="info">
                             <li>
-                                <i class="fa fa-weixin"></i>
-                                wechat: <span class="white follow-wechat">it_qiao_men_zhuan <span class="follow-wechat-popup"><img src="assets/img/logo/wechat_qr_code.jpg" /></span> </span>
+                                <i class="fa fa-whatsapp"></i>
+                                whatsapp: <span class="white follow-whatsapp"><a href="https://bit.ly/qmzit01">bit.ly/qmzit01</a> <span class="follow-wechat-popup"><img src="assets/img/logo/wechat_qr_code.jpg" /></span> </span>
 
                             </li>
                             <li><i class="fa fa-envelope-square"></i> mail: <a class="white" href="mailto:alex@itman.design">alex@itman.design</a></li>
