--- a/itman-iOS-god.html
+++ b/itman-iOS-god.html
@@ -107,17 +107,14 @@
                                         <li><a href="coming-soon/itman-coming-soon.html">IT Skilled Migration</a></li>
                                     </ul>
                                 </li>
-                                <li class="submenu">
-                                    <a href="javascript:void(0)"><i class="fa fa-heart"></i>Private Tutoring</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="javascript:void(0)"><i class="fa fa-question-circle"></i>Q&A</a>
-                                    <!--<ul class="sub-menu">-->
-
-                                    <!--</ul>-->
+                                <li>
+                                    <a href="coming-soon/itman-coming-soon.html"><i class="fa fa-heart"></i>1 on 1</a>
                                 </li>
                                 <li>
-                                    <a href="about.html"><i class="fa fa-info"></i>About Us</a>
+                                    <a href="offer/offer_landing.html"><i class="fa fa-thumbs-up"></i>Offer</a>
+                                </li>
+                                <li>
+                                    <a href="about.html"><i class="fa fa-info"></i> About Us</a>
                                 </li>
                             </ul>
                         </div>
