--- a/coming-soon/itman-coming-soon.html
+++ b/coming-soon/itman-coming-soon.html
@@ -80,7 +80,7 @@
                     <input type="email" placeholder="Your email" required name="EMAIL" id="EMAIL" />
                       <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_03e16b08d9abb3d480275e687_a86430d427" tabindex="-1" value=""></div>
-                    <input type="submit" value="click me to subscribe" name="subscribe" />
+                    <input type="submit" value="subscribe" name="subscribe" />
               </div>
           </form>
           </div>
