--- a/about.html
+++ b/about.html
@@ -97,14 +97,11 @@
                                 <li><a href="coming-soon/itman-coming-soon.html">IT Skilled Migration</a></li>
                             </ul>
                         </li>
-                        <li class="submenu">
-                            <a href="javascript:void(0)"><i class="fa fa-heart"></i>Private Tutoring</a>
+                        <li>
+                            <a href="coming-soon/itman-coming-soon.html"><i class="fa fa-heart"></i>1 on 1</a>
                         </li>
-                        <li class="submenu">
-                            <a href="javascript:void(0)"><i class="fa fa-question-circle"></i>Q&A</a>
-                            <!--<ul class="sub-menu">-->
-
-                            <!--</ul>-->
+                        <li>
+                            <a href="offer/offer_landing.html"><i class="fa fa-thumbs-up"></i>Offer</a>
                         </li>
                         <li>
                             <a href="about.html"><i class="fa fa-info"></i> About Us</a>
