[QMZEN](offer): bug fix

--- a/offer/offer_landing.html
+++ b/offer/offer_landing.html
@@ -34,7 +34,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>QMZIT - Help IT Students Get First Job in Australia</title>
+    <title>QMZIT - Offer Board - Help IT Students Get First Job in Australia</title>
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -75,7 +75,7 @@
         <!--  Main Wrap  -->
         <div id="main-wrap">
             <!--  Header & Menu  -->
-            <header id="header" class="fixed transparent">
+            <header id="header" class="fixed">
                 <nav class="navbar navbar-default white">
                     <!--  Header Logo  -->
                     <div id="logo">
