[QMZEN](offer): bug fix

--- a/offer/offer_landing.html
+++ b/offer/offer_landing.html
@@ -76,7 +76,7 @@
         <div id="main-wrap">
             <!--  Header & Menu  -->
             <header id="header" class="fixed">
-                <nav class="navbar navbar-default white">
+                <nav class="navbar navbar-default">
                     <!--  Header Logo  -->
                     <div id="logo">
                         <a class="navbar-brand" href="../index.html">
