[QMZEN](offer): bug fix

--- a/itman-ml.html
+++ b/itman-ml.html
@@ -754,10 +754,11 @@
                     <div class="col-xs-6 col-sm-3 col-md-2">
                         <h6 class="heading white margin-bottom-extrasmall">Site Map</h6>
                         <ul class="sitemap">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Live Broadcast</a></li>
-                            <li><a href="">Workshop</a></li>
-                            <li><a href="">Private Tutoring</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="#">Live Broadcast</a></li>
+                            <li><a href="#">Workshop</a></li>
+                            <li><a href="#">1 on 1</a></li>
+                            <li><a href="#">Offer</a></li>
                             <li><a href="about.html">About Us</a></li>
                         </ul>
                     </div>
