--- a/offer/offer_landing.html
+++ b/offer/offer_landing.html
@@ -232,20 +232,20 @@
                         </section>
                         <!--  END News Section  -->
                         <!--  Navigation  -->
-                        <section id="nav" class="padding-top-null grey-background">
-                            <div class="row">
-                                <div class="col-xs-6">
-                                    <div class="nav-left">
-                                        <a href="#" class="btn-alt small active shadow margin-null"><i class="icon ion-ios-arrow-left"></i><span>Earlier</span></a>
-                                    </div>
-                                </div>
-                                <div class="col-xs-6">
-                                    <div class="nav-right">
-                                        <a href="#" class="btn-alt small active shadow margin-null"><span>Newer</span><i class="icon ion-ios-arrow-right"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
+                        <!--<section id="nav" class="padding-top-null grey-background">-->
+                            <!--<div class="row">-->
+                                <!--<div class="col-xs-6">-->
+                                    <!--<div class="nav-left">-->
+                                        <!--<a href="#" class="btn-alt small active shadow margin-null"><i class="icon ion-ios-arrow-left"></i><span>Earlier</span></a>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                                <!--<div class="col-xs-6">-->
+                                    <!--<div class="nav-right">-->
+                                        <!--<a href="#" class="btn-alt small active shadow margin-null"><span>Newer</span><i class="icon ion-ios-arrow-right"></i></a>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</section>-->
                         <!--  END Navigation  -->
                     </div>
                     <!--  Right Sidebar  -->
@@ -327,10 +327,11 @@
                     <div class="col-xs-6 col-sm-3 col-md-2">
                         <h6 class="heading white margin-bottom-extrasmall">Site Map</h6>
                         <ul class="sitemap">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Live Broadcast</a></li>
-                            <li><a href="">Workshop</a></li>
-                            <li><a href="">Private Tutoring</a></li>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="#">Live Broadcast</a></li>
+                            <li><a href="#">Workshop</a></li>
+                            <li><a href="#">1 on 1</a></li>
+                            <li><a href="#">Offer</a></li>
                             <li><a href="../about.html">About Us</a></li>
                         </ul>
                     </div>
