[QMZEN](offer): bug fix

--- a/offer/offer_landing.html
+++ b/offer/offer_landing.html
@@ -183,7 +183,7 @@
                                                 </span>
                                                 <h3>Junior iOS Developer</h3>
                                                 <span class="category">Tech</span>
-                                                <span class="category">Global</span>
+                                                <span class="category">Startup</span>
                                                 <span class="date">22.03.2019</span>
                                                 <p>Dylan S. got the junior iOS developer position at startup company Abacus in Melbourne City after completing three months training with QMZ iT program.</p>
                                             </div>
@@ -223,7 +223,7 @@
                                                 <span class="category">Tech</span>
                                                 <span class="category">Global</span>
                                                 <span class="date">01.02.2019</span>
-                                                <p>Dong S. got the junior DevOps developer position at global company NAB in Melbourne City after completing three months training with QMZ iT program.</p>
+                                                <p>YinYin C. got the junior DevOps developer position at global company NAB in Melbourne City after completing three months training with QMZ iT program.</p>
                                             </div>
                                         </div>
                                     </article>
@@ -252,7 +252,7 @@
                     <div class="col-md-3 text">
                         <aside class="sidebar">
                             <div class="widget-wrapper">
-                                <h5>Recent Offer</h5>
+                                <h5>Recent Offers</h5>
                                 <ul class="recent-posts">
                                     <li>
                                         <span class="meta">
