[QMZEN](offer): bug fix

--- a/itman-iOS-god.html
+++ b/itman-iOS-god.html
@@ -1002,7 +1002,7 @@
                         </div>
                         <p class="grey-light">QMZIT - Help IT Students Get First Job in Australia. We provide professional training program to help IT students from different background find their dream jobs.
                             We are a team of senior/lead engineers from top IT company in Australia, together with university professors, aiming to train students to be industry ready in 3 months.
-                            whether you are just graduating, or switching to IT, or want to enter the IT industry but do not know where to start, join QMZ IT, to secure your first job.
+                            Whether you are just graduating, or switching to IT, or want to enter the IT industry but do not know where to start, join QMZ IT, to secure your first job.
                         </p>
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
@@ -1012,7 +1012,7 @@
                             <li><a href="#">Live Broadcast</a></li>
                             <li><a href="#">Workshop</a></li>
                             <li><a href="#">1 on 1</a></li>
-                            <li><a href="#">Offer</a></li>
+                            <li><a href="offer/offer_landing.html">Offer</a></li>
                             <li><a href="about.html">About Us</a></li>
                         </ul>
                     </div>
