[QMZEN](index landing): add offer showcase into index page

--- a/index.html
+++ b/index.html
@@ -158,6 +158,32 @@
                         </div>
                     </div>
                     <!-- END Section same Height. Child get the parent Height. Set the same id -->
+
+                    <!-- student offer -->
+                    <div class="row margin-leftright-null">
+                        <div class="col-md-12 padding-leftright-null bg-img overlay transparent responsive" style="background-image:url(assets/img/offer/past_student_group.png)">
+                            <div class="col-md-6 col-md-offset-6 text text-left padding-bottom-null">
+                                <h2 class="margin-bottom-null title left">PAST STUDENTS</h2>
+                                <div class="padding-onlytop-md">
+                                    <h3 class="big margin-bottom-small grey">30+ Offers Secured <br> Over 35 Hiring Partners</h3>
+                                </div>
+                            </div>
+
+                            <div class="col-md-12 padding-leftright-null">
+                                <div class="col-md-6 col-md-offset-6 padding-leftright-null">
+                                    <div class="text">
+                                        <p class="heading margin-bottom-extrasmall left">
+                                            In 2018, we helped nearly 40 students secure job offers at top companies like NAB, CitiLink, and Suncorp.  <br>
+                                            An average of 4 students every month are placed at top companies!
+                                        </p>
+                                        <br>
+                                        <a href="offer/offer_landing.html" class="btn-simple">more offer</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <!-- Services -->
                     <div class="row no-margin">
                         <div class="col-md-12 padding-leftright-null">
