[QMZEN](offer): add two more student offer example

--- a/offer/offer_landing.html
+++ b/offer/offer_landing.html
@@ -228,6 +228,44 @@
                                         </div>
                                     </article>
                                 </div>
+                                <div class="single-news one-item horizontal-news">
+                                    <article>
+                                        <div class="col-md-6 padding-leftright-null">
+                                            <div class="image" style="background-image:url(../assets/img/offer/offer_4_bg.jpg)"></div>
+                                        </div>
+                                        <div class="col-md-6 padding-leftright-null">
+                                            <div class="content">
+                                                <span class="read">
+                                                    <i class="material-icons">subject</i>
+                                                </span>
+                                                <h3>Junior Android Developer</h3>
+                                                <span class="category">Tech</span>
+                                                <span class="category">Global</span>
+                                                <span class="date">12.21.2018</span>
+                                                <p>Emily H. got the junior Android developer position at global company NAB in Melbourne City after completing three months training with Android program.</p>
+                                            </div>
+                                        </div>
+                                    </article>
+                                </div>
+                                <div class="single-news one-item horizontal-news">
+                                    <article>
+                                        <div class="col-md-6 padding-leftright-null">
+                                            <div class="image" style="background-image:url(../assets/img/offer/offer_2_bg.jpg)"></div>
+                                        </div>
+                                        <div class="col-md-6 padding-leftright-null">
+                                            <div class="content">
+                                                <span class="read">
+                                                    <i class="material-icons">subject</i>
+                                                </span>
+                                                <h3>Junior QA Engineer</h3>
+                                                <span class="category">Tech</span>
+                                                <span class="category">Startup</span>
+                                                <span class="date">12.13.2018</span>
+                                                <p>Toby T. got the junior QA engineer position at startup company Bluedot in Melbourne City after completing three months training with iOS program.</p>
+                                            </div>
+                                        </div>
+                                    </article>
+                                </div>
                             </div>
                         </section>
                         <!--  END News Section  -->
