[QMZEN](about us): fix nav item

--- a/about.html
+++ b/about.html
@@ -82,10 +82,10 @@
                         <li class="submenu">
                             <a href="javascript:void(0)" class="active-item"><i class="fa fa-tv"></i>Live Course</a>
                             <ul class="sub-menu">
-                                <li><a href="itman-foundation-course.html">IT-Foundation🔥</a></li>
-                                <li><a href="itman-iOS-god.html">iOS/Android🔥</a></li>
-                                <li><a href="itman-ml.html">Machine Learning🔥</a></li>
-                                <li><a href="itman-web.html">Web Full-Stack🔥🔥</a></li>
+                                <li><a href="itman-foundation-course.html">IT-Foundation</a></li>
+                                <li><a href="itman-iOS-god.html">iOS/Android</a></li>
+                                <li><a href="itman-ml.html">Machine Learning</a></li>
+                                <li><a href="itman-web.html">Web Full-Stack⭐️</a></li>
                                 <li><a href="coming-soon/itman-coming-soon.html">DevOps/BA</a></li>
                             </ul>
                         </li>
